--- a/src/ProductCard.css
+++ b/src/ProductCard.css
@@ -3,4 +3,24 @@
   height: 363px;
   border: 1px solid black;
   margin: 10px;
+  position: relative;
+}
+
+h2 {
+  background-color: rgba(200, 200, 200, 0.7);
+  color: rgb(80,80,80);
+  font-size: 15px;
+  padding: 10px 8px;
+  margin: 0;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.price {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  position: absolute;
+  bottom: 40px;
+  left: 20px;
 }
