--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,19 @@
 .App {
   text-align: center;
+  padding-bottom: 30px;
 }
 
 .App-header {
-  background-color: #222;
-  /* height: 150px; */
-  padding: 20px;
+  background-color: #343434;
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+h1 {
+  margin: 0;
 }
 
 .card-container {
   display: flex;
   justify-content: center;
   flex-flow: wrap;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
